# ghost

./: CMakeLists.txt  README.md  game.cpp  game.hpp  main.cpp
abs/: a_character.cpp  a_character.hpp  a_plane.cpp  a_plane.hpp  a_player.cpp  a_player.hpp  a_stuff.cpp  a_stuff.hpp  a_weapon.cpp  a_weapon.hpp
bld/: characterbuilder.cpp  characterbuilder.hpp  mapbuilder.cpp  mapbuilder.hpp  playerbuilder.cpp  playerbuilder.hpp  weaponbuilder.cpp  weaponbuilder.hpp
bld/character/: zombiebuilder.cpp  zombiebuilder.hpp
bld/player/: ManBuilder.cpp  ManBuilder.hpp
bld/weapon/: akmbuilder.cpp  akmbuilder.hpp  mac11builder.cpp  mac11builder.hpp  perkbuilder.cpp  perkbuilder.hpp  waltherp38builder.cpp  waltherp38builder.hpp
ctrl/: condition.cpp  condition.hpp  control.cpp  control.hpp
deco/: characterdecorator.cpp  characterdecorator.hpp  mapdecorator.cpp  mapdecorator.hpp  weapondecorator.cpp  weapondecorator.hpp
deco/character/: blooddecorator.cpp  (+7 more)
del/: delegate.hpp
dta/: character.h  global.hpp  player.h
mgr/: audiomanager.cpp  audiomanager.hpp  charactermanager.cpp  charactermanager.hpp  collisionmanager.cpp  collisionmanager.hpp  controlmanager.cpp  controlmanager.hpp  endingmanager.cpp  endingmanager.hpp  eventmanager.cpp  eventmanager.hpp  fontmanager.cpp  fontmanager.hpp  mapmanager.cpp  mapmanager.hpp  menumanager.cpp  menumanager.hpp  openingmanager.cpp  openingmanager.hpp  playermanager.cpp  playermanager.hpp  statusmanager.cpp  statusmanager.hpp
usge/: audio.cpp  audio.hpp  clock.cpp  clock.hpp  freetypelib.cpp  freetypelib.hpp  key.cpp  key.hpp  objloader.cpp  objloader.hpp  openglc.cpp  openglc.hpp  quaternion_utils.cpp  shader.cpp  shader.hpp  tangentspace.cpp  texture.cpp  texture.hpp  vboindexer.cpp  vboindexer.hpp
util/: aabbCollision.cpp  aabbCollision.hpp  circle_dotCollision.cpp  circle_dotCollision.hpp  dijkstraAlgorithm.cpp  dijkstraAlgorithm.hpp  kabezuriCollision.cpp  kabezuriCollision.hpp  linear_circleCollision.cpp  linear_circleCollision.hpp  linear_linearCollision.cpp  linear_linearCollision.hpp  obbCollision.cpp  obbCollision.h  randomizer.cpp  randomizer.hpp  ray_obbCollision.cpp  ray_obbCollision.hpp  skinning.cpp  skinning.h  skinningaux.cpp  skinningaux.h  squareroot.cpp  squareroot.hpp  terrainCollision.cpp  terrainCollision.h  vecmath.cpp  vecmath.hpp
(+6 files in other folders)
